hero + testing scroll
Co-authored-by: michaellidonni <michaellidonni@users.noreply.github.com>
Co-authored-by: chrisk4040 <chrisk4040@users.noreply.github.com>

--- a/home.html
+++ b/home.html
@@ -64,8 +64,10 @@
     </header>
     <main>
       <div class="hero">
+        <div class="overlay"></div>
         <h1>Little Bird Toy Company</h1>
       </div>
+      
     </main>
     <footer>
       <!-- place footer here -->
