--- a/home.html
+++ b/home.html
@@ -63,11 +63,20 @@
       </nav>
     </header>
     <main>
-      <div class="hero">
-        <div class="overlay"></div>
-        <h1>Little Bird Toy Company</h1>
-      </div>
-      
+      <section class="hero" id="hero">
+        <img src="imgs/hero.png" alt="Little Bird Hero" />
+        <div class="hero-inner">
+          <h1>The Little Bird Toy Company</h1>
+          <p>Imagination takes flight</p>
+        </div>
+      </section>
+
+      <section class="about" id="about">
+        <h2>About Us</h2>
+        <p>
+          We craft toys that spark curiosity and joy for every little dreamer.
+        </p>
+      </section>
     </main>
     <footer>
       <!-- place footer here -->
@@ -84,5 +93,9 @@
       integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
       crossorigin="anonymous"
     ></script>
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/gsap.min.js"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/ScrollTrigger.min.js"></script>
+    <script src="js/home.js"></script>
   </body>
 </html>
