new home changes and products

--- a/products.html
+++ b/products.html
@@ -8,7 +8,8 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <link rel="stylesheet" href="css/product.css-" />
+    <link rel="stylesheet" href="css/product.css" />
+    <link rel="stylesheet" href="css/home.css" />
 
     <!-- Bootstrap CSS v5.2.1 -->
     <link
@@ -232,7 +233,7 @@
           </a>
         </div>
       </div>
-  </main>
+    </main>
     <footer>
       <!-- place footer here -->
     </footer>
