--- a/products.html
+++ b/products.html
@@ -33,7 +33,7 @@
             </div>
           </li>
 
-          <li data-href="about.html">
+          <li data-href="home.html#about">
             <div class="about-icon">
               <div class="aboutus">
                 <img src="imgs/mainlogowhite.png" class="imgfix" />
@@ -41,7 +41,7 @@
             </div>
           </li>
 
-          <li data-href="shop.html">
+          <li data-href="products.html">
             <div class="work-icon">
               <img src="imgs/blocks.png" class="imgfix" />
             </div>
@@ -58,182 +58,50 @@
       </nav>
     </header>
 
-    <input type="radio" name="position" checked />
-    <input type="radio" name="position" />
-    <input type="radio" name="position" />
-    <main id="carousel">
-      <div class="item">
-        <!--item 1 -->
-        <div
-          id="carouselExampleControls"
-          class="carousel slide"
-          data-ride="carousel"
-        >
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-              <img
-                class="d-block w-100"
-                src="toys/block1.png"
-                alt="First slide"
-              />
-            </div>
-            <div class="carousel-item">
-              <img
-                class="d-block w-100"
-                src="toys/block1bluey.png"
-                alt="Second slide"
-              />
-            </div>
+    <body>
+      <input type="radio" name="position" checked />
+      <input type="radio" name="position" />
+      <input type="radio" name="position" />
+
+      <main id="carousel">
+        <div class="item">
+          <img src="toys/block1.png" alt="block" />
+        </div>
+        <div class="item">
+          <img src="toys/boat1.png" alt="boat" />
+        </div>
+        <div class="item">
+          <img src="toys/car1.png" alt="car" />
+        </div>
+      </main>
+
+      <div id="modal-container">
+        <div class="modal-background">
+          <div class="modal">
+            <svg
+              class="modal-svg"
+              xmlns="http://www.w3.org/2000/svg"
+              width="100%"
+              height="100%"
+              preserveAspectRatio="none"
+            >
+              <rect
+                x="0"
+                y="0"
+                fill="none"
+                width="100%"
+                height="100%"
+                rx="3"
+              ></rect>
+            </svg>
+            <img id="modal-image" class="modal-image" src="" alt="" />
+            <h2 id="modal-title">Toy Details</h2>
+            <p id="modal-description">Description goes here</p>
           </div>
-          <a
-            class="carousel-control-prev"
-            href="#carouselExampleControls"
-            role="button"
-            data-slide="prev"
-          >
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-          </a>
-          <a
-            class="carousel-control-next"
-            href="#carouselExampleControls"
-            role="button"
-            data-slide="next"
-          >
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-          </a>
         </div>
       </div>
-      <div class="item">
-        <!--item 2-->
-        <div
-          id="carouselExampleControls"
-          class="carousel slide"
-          data-ride="carousel"
-        >
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-              <img
-                class="d-block w-100"
-                src="toys/boat1.png"
-                alt="First slide"
-              />
-            </div>
-            <div class="carousel-item">
-              <img
-                class="d-block w-100"
-                src="toys/boat1blred.png"
-                alt="Second slide"
-              />
-            </div>
-            <div class="carousel-item">
-              <img
-                class="d-block w-100"
-                src="toys/boat1blue.png"
-                alt="Third slide"
-              />
-            </div>
-            <div class="carousel-item">
-              <img
-                class="d-block w-100"
-                src="toys/boat1green.png"
-                alt="Fourth slide"
-              />
-            </div>
-            <div class="carousel-item">
-              <img
-                class="d-block w-100"
-                src="toys/boat1yelb.png"
-                alt="Fifth slide"
-              />
-            </div>
-          </div>
-          <a
-            class="carousel-control-prev"
-            href="#carouselExampleControls"
-            role="button"
-            data-slide="prev"
-          >
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-          </a>
-          <a
-            class="carousel-control-next"
-            href="#carouselExampleControls"
-            role="button"
-            data-slide="next"
-          >
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-          </a>
-        </div>
-      </div>
-      <div class="item">
-        <!--item 3-->
-        <div
-          id="carouselExampleControls"
-          class="carousel slide"
-          data-ride="carousel"
-        >
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-              <img
-                class="d-block w-100"
-                src="toys/car1.png"
-                alt="First slide"
-              />
-            </div>
-            <div class="carousel-item">
-              <img
-                class="d-block w-100"
-                src="toys/car1bluey.png"
-                alt="Second slide"
-              />
-            </div>
-            <div class="carousel-item">
-              <img
-                class="d-block w-100"
-                src="toys/car1greenbl.png"
-                alt="Third slide"
-              />
-            </div>
-            <div class="carousel-item">
-              <img
-                class="d-block w-100"
-                src="toys/car1red.png"
-                alt="Fourth slide"
-              />
-            </div>
-            <div class="carousel-item">
-              <img
-                class="d-block w-100"
-                src="toys/car1yelb.png"
-                alt="Fifth slide"
-              />
-            </div>
-          </div>
-          <a
-            class="carousel-control-prev"
-            href="#carouselExampleControls"
-            role="button"
-            data-slide="prev"
-          >
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-          </a>
-          <a
-            class="carousel-control-next"
-            href="#carouselExampleControls"
-            role="button"
-            data-slide="next"
-          >
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-          </a>
-        </div>
-      </div>
-    </main>
+    </body>
+
     <footer>
       <!-- place footer here -->
     </footer>
@@ -250,5 +118,17 @@
       crossorigin="anonymous"
     ></script>
     <script src="/js/product.js"></script>
+    <script>
+      document.querySelectorAll("nav li[data-href]").forEach((item) => {
+        item.addEventListener("click", function () {
+          const href = this.getAttribute("data-href");
+          if (href.startsWith("#")) {
+            document.querySelector(href)?.scrollIntoView();
+          } else {
+            window.location.href = href;
+          }
+        });
+      });
+    </script>
   </body>
 </html>
