--- a/contact.html
+++ b/contact.html
@@ -57,47 +57,98 @@
       </nav>
     </header>
     <main>
-            <!-- Contact Form Section -->
+      <!-- Contact Form Section -->
       <div class="new_home_web">
         <div class="responsive-container-block big-container">
-          <img class="imgBG" src="https://workik-widget-assets.s3.amazonaws.com/widget-assets/images/aw65.png" />
+          <img
+            class="imgBG"
+            src="https://workik-widget-assets.s3.amazonaws.com/widget-assets/images/aw65.png"
+          />
           <div class="responsive-container-block textContainer">
             <div class="topHead">
-              <p class="text-blk heading">Get in <span class="orangeText">touch</span></p>
+              <p class="text-blk heading">
+                Contact Us</span>
+              </p>
               <div class="orangeLine"></div>
             </div>
-            <p class="text-blk subHeading">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-            </p>
           </div>
 
           <div class="responsive-container-block container">
-            <div class="responsive-cell-block wk-tab-12 wk-mobile-12 wk-desk-7 wk-ipadp-10 line">
-              <form class="form-box" action="https://api.web3forms.com/submit" method="POST">
+            <div
+              class="responsive-cell-block wk-tab-12 wk-mobile-12 wk-desk-7 wk-ipadp-10 line"
+            >
+              <form
+                class="form-box"
+                action="https://api.web3forms.com/submit"
+                method="POST"
+              >
                 <div class="container-block form-wrapper">
                   <div class="responsive-container-block">
                     <div class="left4">
-                      <div class="responsive-cell-block wk-ipadp-6 wk-tab-12 wk-mobile-12 wk-desk-6">
-                        <input class="input" name="FirstName" placeholder="First Name" required />
+                      <div
+                        class="responsive-cell-block wk-ipadp-6 wk-tab-12 wk-mobile-12 wk-desk-6"
+                      >
+                        <input
+                          class="input"
+                          name="FirstName"
+                          placeholder="First Name"
+                          required
+                        />
                       </div>
-                      <div class="responsive-cell-block wk-desk-6 wk-ipadp-6 wk-tab-12 wk-mobile-12">
-                        <input class="input" name="LastName" placeholder="Last Name" required />
+                      <div
+                        class="responsive-cell-block wk-desk-6 wk-ipadp-6 wk-tab-12 wk-mobile-12"
+                      >
+                        <input
+                          class="input"
+                          name="LastName"
+                          placeholder="Last Name"
+                          required
+                        />
                       </div>
-                      <div class="responsive-cell-block wk-desk-6 wk-ipadp-6 wk-tab-12 wk-mobile-12">
-                        <input class="input" type="email" name="Email" placeholder="Email Address" required />
+                      <div
+                        class="responsive-cell-block wk-desk-6 wk-ipadp-6 wk-tab-12 wk-mobile-12"
+                      >
+                        <input
+                          class="input"
+                          type="email"
+                          name="Email"
+                          placeholder="Email Address"
+                          required
+                        />
                       </div>
-                      <div class="responsive-cell-block wk-desk-6 wk-ipadp-6 wk-tab-12 wk-mobile-12 lastPhone">
-                        <input class="input" name="PhoneNumber" placeholder="Phone Number" />
+                      <div
+                        class="responsive-cell-block wk-desk-6 wk-ipadp-6 wk-tab-12 wk-mobile-12 lastPhone"
+                      >
+                        <input
+                          class="input"
+                          name="PhoneNumber"
+                          placeholder="Phone Number"
+                        />
                       </div>
                     </div>
-                    <div class="responsive-cell-block wk-tab-12 wk-mobile-12 wk-desk-12 wk-ipadp-12">
-                      <textarea class="textinput" name="Message" placeholder="Message" required></textarea>
+                    <div
+                      class="responsive-cell-block wk-tab-12 wk-mobile-12 wk-desk-12 wk-ipadp-12"
+                    >
+                      <textarea
+                        class="textinput"
+                        name="Message"
+                        placeholder="Message"
+                        required
+                      ></textarea>
                     </div>
                   </div>
 
                   <!-- Hidden Web3Forms fields -->
-                  <input type="hidden" name="access_key" value="f95e3d4d-c3d3-4f90-b64d-be235044c584" />
-                  <input type="checkbox" name="botcheck" style="display:none" />
+                  <input
+                    type="hidden"
+                    name="access_key"
+                    value="f95e3d4d-c3d3-4f90-b64d-be235044c584"
+                  />
+                  <input
+                    type="checkbox"
+                    name="botcheck"
+                    style="display: none"
+                  />
 
                   <button class="send" type="submit">Send</button>
                 </div>
