contact updated + footer

--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="contact.css" />
+    <link rel="stylesheet" href="css/contact.css" />
   </head>
 
   <body>
@@ -60,10 +60,6 @@
       <!-- Contact Form Section -->
       <div class="new_home_web">
         <div class="responsive-container-block big-container">
-          <img
-            class="imgBG"
-            src="https://workik-widget-assets.s3.amazonaws.com/widget-assets/images/aw65.png"
-          />
           <div class="responsive-container-block textContainer">
             <div class="topHead">
               <p class="text-blk heading">
@@ -71,6 +67,21 @@
               </p>
               <div class="orangeLine"></div>
             </div>
+            <p class="text-blk subHeading">
+<ul class="contact-info">
+  <li><strong>Address:</strong> <ul>43 Main St, Toms River, NJ 08753</ul></li>
+  <li><strong>Phone:</strong> 
+    <ul>(732) 555-1234</ul></li>
+  <li>
+    <strong>Store Hours:</strong>
+    <ul>
+      <li>Weekdays: 7:00 AM – 4:30 PM</li>
+      <li>Saturday: 10:00 AM – 2:00 PM</li>
+    </ul>
+  </li>
+</ul>
+
+            </p>
           </div>
 
           <div class="responsive-container-block container">
@@ -158,9 +169,15 @@
         </div>
       </div>
     </main>
-    <footer>
-      <!-- place footer here -->
-    </footer>
+<footer>
+  <div class="rounded-social-buttons">
+    <a class="social-button facebook" href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook-f"></i></a>
+    <a class="social-button instagram" href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a>
+    <a class="social-button twitter" href="https://www.twitter.com/" target="_blank"><i class="fab fa-twitter"></i></a>
+    <a class="social-button snapchat" href="https://www.snapchat.com/" target="_blank"><i class="fab fa-snapchat-ghost"></i></a>
+  </div>
+</footer>
+
     <!-- Bootstrap JavaScript Libraries -->
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
@@ -185,5 +202,6 @@
         });
       });
     </script>
+    <script defer src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" integrity="sha384-rOA1PnstxnOBLzCLMcre8ybwbTmemjzdNlILg8O7z1lUkLXozs4DHonlDtnE7fpc" crossorigin="anonymous"></script>
   </body>
 </html>
