footer added every page

--- a/home.html
+++ b/home.html
@@ -124,8 +124,13 @@
       </section>
     </main>
     <footer>
-      <!-- place footer here -->
-    </footer>
+  <div class="rounded-social-buttons">
+    <a class="social-button facebook" href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook-f"></i></a>
+    <a class="social-button instagram" href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a>
+    <a class="social-button twitter" href="https://www.twitter.com/" target="_blank"><i class="fab fa-twitter"></i></a>
+    <a class="social-button snapchat" href="https://www.snapchat.com/" target="_blank"><i class="fab fa-snapchat-ghost"></i></a>
+  </div>
+</footer>
     <!-- Bootstrap JavaScript Libraries -->
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
