fixed positioning on product page

--- a/contact.html
+++ b/contact.html
@@ -57,7 +57,10 @@
       </nav>
     </header>
     <main>
+      <!-- Scroll to Top Button -->
+      <a href="#" id="scroll" style="display: none"><span></span></a>
       <!-- Contact Form Section -->
+
       <div class="new_home_web">
         <div class="responsive-container-block big-container">
           <div class="responsive-container-block textContainer">
@@ -207,6 +210,12 @@
         });
       });
     </script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+      integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+      crossorigin="anonymous"
+    ></script>
+    <script src="/js/script.js"></script>
     <script defer src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" integrity="sha384-rOA1PnstxnOBLzCLMcre8ybwbTmemjzdNlILg8O7z1lUkLXozs4DHonlDtnE7fpc" crossorigin="anonymous"></script>
   </body>
 </html>
