Fixed the products page

--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,7 @@
             </div>
           </li>
 
-          <li data-href="#about">
+          <li data-href="home.html#about">
             <div class="about-icon">
               <div class="aboutus">
                 <img src="imgs/mainlogowhite.png" class="imgfix" />
