--- a/products.html
+++ b/products.html
@@ -1,28 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Products</title>
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
-    <link rel="stylesheet" href="css/product.css" />
-    <link rel="stylesheet" href="css/home.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
-      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
-      crossorigin="anonymous"
     />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
-    />
+    <link rel="stylesheet" href="css/product.css" />
   </head>
   <body>
     <header>
@@ -36,22 +22,21 @@
               <div class="front"></div>
             </div>
           </li>
+
           <li data-href="home.html#about">
             <div class="about-icon">
               <div class="aboutus">
-                <img
-                  src="imgs/mainlogowhite.png"
-                  class="imgfix"
-                  alt="About Us"
-                />
+                <img src="imgs/mainlogowhite.png" class="imgfix" />
               </div>
             </div>
           </li>
+
           <li data-href="products.html">
             <div class="work-icon">
-              <img src="imgs/blocks.png" class="imgfix" alt="Products" />
+              <img src="imgs/blocks.png" class="imgfix" />
             </div>
           </li>
+
           <li data-href="contact.html">
             <div class="mail-icon">
               <div class="mail-base">
@@ -62,100 +47,42 @@
         </ul>
       </nav>
     </header>
+    <main>
+      <div class="container py-4">
+        <h1 class="text-center mb-4">Our Products</h1>
 
-    <div class="container-fluid py-4">
-      <!-- Header Section -->
-      <div class="row justify-content-center">
-        <div class="col-12 border p-3 mb-2 text-center">
-          <div>
-            <input type="radio" name="position" id="pos1" checked />
-            <input type="radio" name="position" id="pos2" />
-            <input type="radio" name="position" id="pos3" />
-            <input type="radio" name="position" id="pos4" />
-            <input type="radio" name="position" id="pos5" />
-            <main id="carousel">
-              <button class="carousel-nav prev" id="prevBtn">‹</button>
-              <button class="carousel-nav next" id="nextBtn">›</button>
-              <div class="item carousel-card" data-index="0">
-                <img src="toys/block1.png" alt="Block" />
-              </div>
-              <div class="item carousel-card" data-index="1">
-                <img src="toys/boat1.png" alt="Boat" />
-              </div>
-              <div class="item carousel-card" data-index="2">
-                <img src="toys/car1.png" alt="Car" />
-              </div>
-              <div class="item carousel-card" data-index="3">
-                <img src="toys/plane1bluey.png" alt="Plane" />
-                <!-- Placeholder for plane1.png -->
-              </div>
-              <div class="item carousel-card" data-index="4">
-                <img src="toys/train1blred.png" alt="Train" />
-                <!-- Placeholder for train1.png -->
-              </div>
-            </main>
-          </div>
-        </div>
+        <div id="product-gallery" class="row g-4"></div>
+
+        <h2 class="text-center my-5">Customer Reviews</h2>
+        <div id="review-section" class="row g-4"></div>
       </div>
 
-      <!-- Main Content Row -->
-      <div class="row justify-content-center">
-        <!-- Left Side - Color Carousel -->
-        <div class="col-md-6 border p-3 mb-2 text-center">
-          <section
-            id="image-carousel"
-            class="splide"
-            aria-label="Product Colors"
-          >
-            <div class="splide__track">
-              <ul class="splide__list">
-                <li class="splide__slide">
-                  <img src="toys/block1bluey.png" alt="Block Blue" />
-                </li>
-                <li class="splide__slide">
-                  <img src="toys/boat1blred.png" alt="Boat Blue-Red" />
-                </li>
-                <li class="splide__slide">
-                  <img src="toys/car1greenbl.png" alt="Car Green-Blue" />
-                </li>
-              </ul>
+      <!-- Modal for Learn More -->
+      <div
+        class="modal fade"
+        id="productModal"
+        tabindex="-1"
+        aria-hidden="true"
+      >
+        <div class="modal-dialog modal-dialog-centered">
+          <div class="modal-content p-3">
+            <div class="modal-header">
+              <h5 class="modal-title" id="modalTitle">Product Info</h5>
+              <button
+                type="button"
+                class="btn-close"
+                data-bs-dismiss="modal"
+              ></button>
             </div>
-          </section>
-        </div>
-
-        <!-- Right Side - Reviews -->
-        <div class="col-md-6 border p-3 mb-2 text-center">
-          <div
-            class="elfsight-app-01210c42-f3bd-4d19-8076-fb7a48634784"
-            data-elfsight-app-lazy
-          ></div>
-        </div>
-      </div>
-    </div>
-
-    <div id="modal-container">
-      <div class="modal-background">
-        <div class="modal">
-          <div class="modal-header">
-            <h2 id="modal-title">Toy Details</h2>
-            <button class="modal-close" id="modal-close-btn">×</button>
-          </div>
-          <div class="modal-body">
-            <div class="main-image-container">
-              <img id="modal-image" class="modal-image" src="" alt="" />
+            <div class="modal-body">
+              <img id="modalImage" src="" alt="" class="img-fluid mb-3" />
+              <p id="modalDescription"></p>
+              <p><strong>Price:</strong> $<span id="modalPrice"></span></p>
             </div>
-            <div class="color-selector-title">Available Colors:</div>
-            <div id="color-options" class="color-options"></div>
-          </div>
-          <div class="modal-actions">
-            <button class="action-button" id="view-details-btn">
-              View Details
-            </button>
           </div>
         </div>
       </div>
-    </div>
-
+    </main>
     <footer>
       <div class="rounded-social-buttons">
         <a
@@ -184,38 +111,41 @@
         ></a>
       </div>
     </footer>
-
+    <!-- Bootstrap JavaScript Libraries -->
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
       integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
       crossorigin="anonymous"
     ></script>
-    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
       integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
       crossorigin="anonymous"
     ></script>
-    <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/js/splide.min.js"></script>
-    <script
-      src="https://static.elfsight.com/platform/platform.js"
-      async
-    ></script>
-    <script src="js/product.js"></script>
-    <script src="js/productc.js"></script>
     <script>
       document.querySelectorAll("nav li[data-href]").forEach((item) => {
         item.addEventListener("click", function () {
           const href = this.getAttribute("data-href");
           if (href.startsWith("#")) {
-            document
-              .querySelector(href)
-              ?.scrollIntoView({ behavior: "smooth" });
+            document.querySelector(href)?.scrollIntoView();
           } else {
             window.location.href = href;
           }
         });
       });
     </script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+      integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+      crossorigin="anonymous"
+    ></script>
+    <script src="/js/product.js"></script>
+    <script
+      defer
+      src="https://use.fontawesome.com/releases/v5.15.4/js/all.js"
+      integrity="sha384-rOA1PnstxnOBLzCLMcre8ybwbTmemjzdNlILg8O7z1lUkLXozs4DHonlDtnE7fpc"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
